src/test/06-Errors/error-static-var-scope-4.txt
error-static-var-scope-4.ck:2:6: error: static variables must be declared at class scope
[2] 5 => static int X;
         ^
